# runner

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  codex_plugin_assemble.py  codex_plugin_assemble_test.py  codex_plugin_validate.py  pyproject.toml
.agents/plugins/: marketplace.json
.github/scripts/: install-cosign.sh  release_provenance.py  release_provenance_test.py
.github/workflows/: codex-plugin-release.yml  runner-cross-platform.yml
crates/loomex-cli/: Cargo.toml
crates/loomex-cli/src/: main.rs  setup_transaction.rs
crates/loomex-cli/tests/: runner_guard_cli.rs
crates/loomex-core/: Cargo.toml  build.rs
crates/loomex-core/src/: approval.rs  auth.rs  binding.rs  capability.rs  config.rs  device.rs  enterprise_acceptance.rs  execution.rs  grpc.rs  lib.rs  lifecycle.rs  local_capabilities.rs  local_control.rs  logs.rs  management.rs  operational_readiness.rs  policy.rs  protocol.rs  redaction.rs  release_distribution.rs  release_security.rs  runtime_guard.rs  runtime_install.rs  security.rs  service.rs  stream.rs  transport.rs
crates/loomex-mcp/: Cargo.toml
crates/loomex-mcp/src/: human_input_app.html  ipc.rs  lib.rs  list_table_app.html  main.rs  protocol.rs  tools.rs
crates/loomex-mcp/tests/: stdio_protocol.rs
crates/loomex-protocol/: Cargo.toml
crates/loomex-protocol/src/: lib.rs
crates/loomex-tauri/: Cargo.toml  tauri.conf.json
crates/loomex-tauri/capabilities/: default.json
crates/loomex-tauri/permissions/: commands.toml
crates/loomex-tauri/src/: lib.rs  main.rs
crates/loomex-tauri/ui/: index.html
docs/: enterprise-acceptance-security-review.md  legacy-compatibility.md  local-control-ipc.md  mac-packaging-signing-smoke.md  managed-policy-admin-controls.md  operational-readiness-slo-runbooks.md  protocol-hardening-websocket-fallback.md  release-channels-installers.md  release-security.md  repository-migration.md  rust-core-architecture.md  sandbox-network-device-security.md  spike-baseline.md  support-debug-migration-tooling.md
plugin/loomex/: README.md
plugin/loomex/.codex-plugin/: plugin.json
plugin/loomex/packaging/: README.md  runtime-manifest.template.json
plugin/loomex/scripts/: install-codex.sh  install-marketplace.sh  launch-mcp.mjs  launch-mcp.sh  validate-package.mjs
plugin/loomex/skills/loomex/: SKILL.md
plugin/loomex/skills/loomex/references/: architecture.md  human-and-approvals.md  runner-operations.md  setup-and-auth.md  workflows-and-runs.md
plugin/loomex/skills/scope/: SKILL.md
plugin/loomex/tests/: launcher.test.mjs  static.test.mjs
plugins/loomex/: .mcp.json  README.md
plugins/loomex/.codex-plugin/: plugin.json
plugins/loomex/packaging/: README.md  marketplace.template.json  runtime-manifest.json  runtime-manifest.template.json  targets.json
plugins/loomex/scripts/: install-codex.sh  install-marketplace.sh  launch-mcp.mjs  validate-package.mjs
plugins/loomex/skills/human/: SKILL.md
plugins/loomex/skills/human/agents/: openai.yaml
plugins/loomex/skills/loomex/: SKILL.md
plugins/loomex/skills/loomex/references/: architecture.md  human-and-approvals.md  runner-operations.md  safety.md  setup-and-auth.md  workflows-and-runs.md  workspace-binding.md
plugins/loomex/skills/runs/: SKILL.md
plugins/loomex/skills/scope/: SKILL.md
plugins/loomex/skills/setup/: SKILL.md
plugins/loomex/skills/workflow/: SKILL.md
plugins/loomex/tests/: launcher.test.mjs  static.test.mjs
proto/loomex/runner/v1/: runner_stream.proto
scripts/: baseline_smoke.sh  codex_mcp_discovery_smoke.py  mac_packaging_smoke.sh
src/loomex_runner/: __main__.py  cli.py  client.py  config.py  jobs.py
tests/: test_cli.py  test_jobs.py
(+4 files in other folders)
