[package]
name = "loomex-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
loomex-core = { path = "../loomex-core" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[[bin]]
name = "loomex"
path = "src/main.rs"
