[package]
name = "loomex-cli"
version = "0.1.6"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
loomex-core = { path = "../loomex-core" }
getrandom = "0.3"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[[bin]]
name = "loomex"
path = "src/main.rs"
