[package]
name = "loomex-core"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
libc = "0.2"
prost = "0.13"
prost-types = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
futures-util = "0.3"
getrandom = "0.3"
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tonic = { version = "0.12", features = ["transport", "tls", "tls-roots", "gzip"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
