[package]
name = "loomex-mcp"
version = "0.1.6"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tempfile = "3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "loomex-mcp"
path = "src/main.rs"
