[package]
name = "loomex-tauri"
version = "0.1.11"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
loomex-core = { path = "../loomex-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "loomex-tauri"
path = "src/main.rs"
